--- a/NeproFinishedGoodsAngular5/ClientApp/src/index.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="assets/material-style.css" rel="stylesheet" />
   <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
   <link href="../node_modules/ag-grid-community/dist/styles/ag-theme-balham.css" rel="stylesheet" type="text/css" />
   <link href="../node_modules/ag-grid-community/dist/styles/ag-grid.css" rel="stylesheet" type="text/css" />
 
@@ -24,7 +25,7 @@
         $("#login").css('display', 'block');
         $("#forgot").css('display', 'none');
       });
-     })
+    })
 
   </script>
 </head>
